--- a/copa.html
+++ b/copa.html
@@ -47,7 +47,7 @@
             <li>Depois do tri, ficamos 24 anos em jejum de títulos, somente em 1994 nós ganhamos o tetra nos pênaltis contra a Itália</li>
             <li>Após o fiasco que foi em 1998, em 2002 chegamos com tudo para poder nos redimir da decepção que foi em 98, em 2002 fomos campeoões pra cima da Alemanha.</li>
         </ul>
-        <h3>Maiores rtilheiros do torneio</h3>
+        <h3>Maiores artilheiros do torneio</h3>
         <ol>
             <li><strong>Miroslav Klose:</strong> 16 gols pela seleção alemã</li>
             <img src="./src/img/klose.webp"> <br>
@@ -67,7 +67,7 @@
             <img src="./src/img/just.jpg"> <br>
             <li><strong>Sandor Kocsis:</strong> 11 gols pela seleção hungara</li>
             <img src="./src/img/koksis.jpg"> <br>
-            <li><strong>Gbariel Batistuta</strong> 10 gols pela seleção argentina</li>
+            <li><strong>Gabriel Batistuta</strong> 10 gols pela seleção argentina</li>
             <img src="./src/img/1998_BATISTUTA_SILVER_SHOE.webp"> <br>
         </ol>
  
