--- a/boladeouro.html
+++ b/boladeouro.html
@@ -448,7 +448,7 @@
         <img src="./src/img/messi.webp"> <br>
         <li><i>Cristiano Ronaldo</i> 5 Bolas de Ouro (2008, 2013, 2014, 2016 & 2017)</li>
         <img src="./src/img/cristiano-ronaldo-e1697230106138.webp"> <br>
-        <li><i>>Johan Cruyff</i> 3 Bolas de Ouro (1971, 1973 & 1974)</li>
+        <li><i>Johan Cruyff</i> 3 Bolas de Ouro (1971, 1973 & 1974)</li>
         <img src="./src/img/Johan_Cruyff_1974c.jpg"> <br>
         <li><i>Michel Platini</i> 3 Bolas de Ouro (1983, 1984, & 1985)</li>
         <img src="./src/img/michel.jpg"> <br>
